# arrow-playground

./: Cargo.toml  README.md
benches/: bench_columnar.rs  bench_compiled.rs  bench_compiled_traditional.rs  bench_query.rs  bench_row.rs  bench_traditional.rs  common.rs
src/: columnar.rs  compiled.rs  exec.rs  lib.rs  main.rs  row.rs  shared_data.rs  traditional.rs
