[package]
name = "arrow_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "54.2.1"
arrow-arith = "54.2.1"
arrow-select = "54.2.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_row"
harness = false

[[bench]]
name = "bench_compiled"
harness = false

[[bench]]
name = "bench_columnar"
harness = false